--- a/Web/www/css/styles.css
+++ b/Web/www/css/styles.css
@@ -1,4 +1,70 @@
+.separator-container .separator.line-separator:before, .separator-container .separator.line-separator:after {
+    display: block;
+    width: 40%;
+    content: " ";
+    margin-top: 14px;
+    border: 1px solid #c5a47e;
+}
 
+.separator-container .separator.line-separator:before {
+    float: left;
+}
+
+.separator-container .separator.line-separator:after {
+    float: right;
+}
+
+.wrapper .section .parallax > img {
+  width: 100%;
+  min-width: 0;
+  min-height: 0;
+}
+.pattern-image {
+    width: 100%;
+    background-size: 100%;
+}
+
+.section-header .separator {
+    margin: 0em auto 2em;
+    border: 1px
+}
+
+.section-header .container {
+    z-index: 3;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    top: 0;
+}
+
+.pattern-image:after{
+  opacity: .2;
+/*                 background: #111; */
+}
+.section-header h1{
+  text-shadow: -2px 2px 30px rgba(0, 0, 0, 0.25), -2px 4px 14px rgba(0, 0, 0, 0.1);
+}
+
+.section-header .separator.line-separator:before, .section-header .separator.line-separator:after {
+    border-color: white;
+}
+
+.section-header h5{
+  text-shadow: 0px 0px 11px rgba(0, 0, 0, 0.3);
+}
+.section-header .content{
+  top: 42%;
+  position: relative;
+  transform: translateY(-50%);
+  color: white;
+  text-align: center;
+  text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+.section-introduction .title {
+  text-align: center;
+}
 
 header h1 {
   font-size: 60px;
@@ -6,14 +72,9 @@ header h1 {
   margin: 30px 0 30px 0;
 }
 
-.container {
-  width: 850px;
-}
-
 #carousel-example-generic {
 
 }
-
 footer {
   background-color: grey;
   padding: 60px;
