--- a/Web/www/css/styles.css
+++ b/Web/www/css/styles.css
@@ -66,24 +66,121 @@
   text-align: center;
 }
 
+.section-topic .title{
+  text-align: center;
+}
+
+.section-topic .col-md-2 {
+  text-align: right;
+  position: relative;
+  top: -50%;
+  font-size: 500%;
+}
+
+.section-topic .col-md-9{
+  text-align: left;
+}
+
+.section-topic .row-topic{
+  border-style:groove;
+  border-radius: 16px;
+  width: 80%;
+  position: relative;
+}
+
+.section-topic .row-topic1{
+  position: relative;
+  left: 150px;
+}
+
+.section-topic .row-topic1:hover{
+  position: relative;
+  left: 100px;
+}
+
+.section-topic .row-topic1 div.col-md-2 p i.em-japanese_goblin {
+  display:none;
+}
+
+.section-topic .row-topic1:hover div.col-md-2 p i.em-japanese_goblin {
+  display:block;
+}
+
+.section-topic .row-topic1 div.col-md-2 p i.em-angry {
+  display: block;
+}
+
+.section-topic .row-topic1:hover div.col-md-2 p i.em-angry {
+  display: none;
+}
+
+.section-topic .row-topic2 {
+  position: relative;
+  left: 150px;
+}
+
+.section-topic .row-topic2:hover {
+  position: relative;
+  left: 100px;
+}
+
+.section-topic .row-topic2 div.col-md-2 p i.em-blush {
+  display:block;
+}
+
+.section-topic .row-topic2:hover div.col-md-2 p i.em-blush {
+  display:none;
+}
+
+.section-topic .row-topic2 div.col-md-2 p i.em-boom {
+  display: none;
+}
+
+.section-topic .row-topic2:hover div.col-md-2 p i.em-boom {
+  display: block;
+}
+
+.section-topic .row-topic3{
+  position: relative;
+  left: 150px;
+}
+
+.section-topic .row-topic3:hover{
+  position: relative;
+  left: 100px;
+}
+
+.section-topic .row-topic3 div.col-md-2 p i.em-flushed {
+  display:block;
+}
+
+.section-topic .row-topic3:hover div.col-md-2 p i.em-flushed {
+  display:none;
+}
+
+.section-topic .row-topic3 div.col-md-2 p i.em-rage {
+  display: none;
+}
+
+.section-topic .row-topic3:hover div.col-md-2 p i.em-rage {
+  display: block;
+}
+
 header h1 {
   font-size: 60px;
   text-align: center;
   margin: 30px 0 30px 0;
 }
 
-#carousel-example-generic {
-
-}
 footer {
-  background-color: grey;
+  background-color:#f7f7f7;
   padding: 60px;
 }
 
 footer ul {
   padding: 0;
   list-style-type: none;
-  text-align: center;
+
 }
 
 footer li {
@@ -92,10 +189,5 @@ footer li {
 }
 
 footer a {
-  color: #fff;
-}
-
-footer a:hover {
-  color: #fff;
-  text-decoration: none;
+  color: black;
 }
