--- a/Web/www/css/styles.css
+++ b/Web/www/css/styles.css
@@ -14,14 +14,32 @@
     float: right;
 }
 
+.space-50{
+    height: 50px;
+    width: 100%;
+    display: block;
+    content: "";
+}
+
 .wrapper .section .parallax > img {
   width: 100%;
   min-width: 0;
   min-height: 0;
 }
+
+.section {
+    padding: 1.875em 0;
+    position: relative;
+    background-color: #FFFFFF;
+}
+
 .pattern-image {
     width: 100%;
     background-size: 100%;
+}
+.pattern-image:after{
+  opacity: .2;
+/*                 background: #111; */
 }
 
 .section-header .separator {
@@ -38,10 +56,6 @@
     top: 0;
 }
 
-.pattern-image:after{
-  opacity: .2;
-/*                 background: #111; */
-}
 .section-header h1{
   text-shadow: -2px 2px 30px rgba(0, 0, 0, 0.25), -2px 4px 14px rgba(0, 0, 0, 0.1);
 }
@@ -54,8 +68,8 @@
   text-shadow: 0px 0px 11px rgba(0, 0, 0, 0.3);
 }
 .section-header .content{
-  top: 42%;
   position: relative;
+  top: 42%;
   transform: translateY(-50%);
   color: white;
   text-align: center;
