--- a/Web/www/css/styles.css
+++ b/Web/www/css/styles.css
@@ -1,27 +1,36 @@
-.separator-container .separator.line-separator:before, .separator-container .separator.line-separator:after {
-    display: block;
-    width: 40%;
-    content: " ";
-    margin-top: 14px;
-    border: 1px solid #c5a47e;
+nav .navbar-header a i.em-jack_o_lantern {
+  font-size: 30px;
+  display:none;
 }
 
-.separator-container .separator.line-separator:before {
-    float: left;
+nav .navbar-header a:hover i.em-jack_o_lantern {
+  font-size: 30px;
+  display:block;
 }
 
-.separator-container .separator.line-separator:after {
-    float: right;
+nav .navbar-header a i.em-smile {
+  font-size: 30px;
+  display: block;
 }
 
-.wrapper .section .parallax > img {
+nav .navbar-header a:hover i.em-smile {
+  font-size: 30px;
+  display: none;
+}
+
+.section .parallax > img {
   width: 100%;
   min-width: 0;
   min-height: 0;
 }
+
 .pattern-image {
     width: 100%;
     background-size: 100%;
+}
+
+.pattern-image:after{
+  opacity: .2;
 }
 
 .section-header .separator {
@@ -29,19 +38,6 @@
     border: 1px
 }
 
-.section-header .container {
-    z-index: 3;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: block;
-    top: 0;
-}
-
-.pattern-image:after{
-  opacity: .2;
-/*                 background: #111; */
-}
 .section-header h1{
   text-shadow: -2px 2px 30px rgba(0, 0, 0, 0.25), -2px 4px 14px rgba(0, 0, 0, 0.1);
 }
@@ -53,14 +49,34 @@
 .section-header h5{
   text-shadow: 0px 0px 11px rgba(0, 0, 0, 0.3);
 }
+
 .section-header .content{
   top: 42%;
-  position: relative;
-  transform: translateY(-50%);
-  color: white;
-  text-align: center;
-  text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
 }
+
+a.scroll-arrow {
+  font-size: 70px;
+  width: 70px;
+  border:none;
+  bottom: 100px;
+}
+
+.scroll-arrow i.em-book {
+    display:none;
+}
+
+.scroll-arrow:hover i.em-book {
+  display: block;
+}
+
+.scroll-arrow i.em-open_mouth {
+  display: block;
+}
+
+.scroll-arrow:hover i.em-open_mouth {
+display: none;
+}
+
 
 .section-introduction .title {
   text-align: center;
