--- a/Web/www/css/styles.css
+++ b/Web/www/css/styles.css
@@ -82,6 +82,10 @@ display: none;
   text-align: center;
 }
 
+.section-introduction .carousel-caption {
+  color: black;
+}
+
 .section-topic .title{
   text-align: center;
 }
