--- a/Web/www/css/styles.css
+++ b/Web/www/css/styles.css
@@ -18,10 +18,15 @@ nav .navbar-header a:hover i.em-smile {
   display: none;
 }
 
+img {
+cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/happy.png"),auto;
+}
+
 .section .parallax > img {
   width: 100%;
   min-width: 0;
   min-height: 0;
+  cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/happy.png"),auto;
 }
 
 .pattern-image {
@@ -40,6 +45,7 @@ nav .navbar-header a:hover i.em-smile {
 
 .section-header h1{
   text-shadow: -2px 2px 30px rgba(0, 0, 0, 0.25), -2px 4px 14px rgba(0, 0, 0, 0.1);
+  cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/meh.png"), auto;
 }
 
 .section-header .separator.line-separator:before, .section-header .separator.line-separator:after {
@@ -48,6 +54,11 @@ nav .navbar-header a:hover i.em-smile {
 
 .section-header h5{
   text-shadow: 0px 0px 11px rgba(0, 0, 0, 0.3);
+  cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/happy.png"),auto;
+}
+
+.section-header {
+  cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/sad.png"),auto;
 }
 
 .section-header .content{
@@ -210,4 +221,8 @@ footer li {
 
 footer a {
   color: black;
+}
+
+hr {
+  border-top: 1px solid #c5a47e;
 }
